<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentWeatherFragment">

    <TextView
        android:id="@+id/tvWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWeather"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/temperature"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeather" />

    <TextView
        android:id="@+id/tvMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temp_max"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTemp"
        app:layout_constraintTop_toBottomOf="@+id/tvTemp" />

    <TextView
        android:id="@+id/tvMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temp_min"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvMax"
        app:layout_constraintTop_toBottomOf="@+id/tvMax" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/desc"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvMin"
        app:layout_constraintTop_toBottomOf="@+id/tvMin" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/humidity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <TextView
        android:id="@+id/tvWindSpd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wind_spd"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvHumidity"
        app:layout_constraintTop_toBottomOf="@+id/tvHumidity" />

    <TextView
        android:id="@+id/tvWindDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wind_deg"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvWindSpd"
        app:layout_constraintTop_toBottomOf="@+id/tvWindSpd" />

    <TextView
        android:id="@+id/tvCloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cloudiness"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvWindDegree"
        app:layout_constraintTop_toBottomOf="@+id/tvWindDegree" />

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toTopOf="@+id/tvTemp" />

    <Button
        android:id="@+id/buttonCheckForecast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/check_forecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCloudiness" />

    <TextView
        android:id="@+id/textViewTempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewTemp"
        app:layout_constraintTop_toTopOf="@+id/tvMax" />

    <TextView
        android:id="@+id/textViewTempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewTempMax"
        app:layout_constraintTop_toTopOf="@+id/tvMin" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewTempMin"
        app:layout_constraintTop_toTopOf="@+id/tvDesc" />

    <TextView
        android:id="@+id/textViewHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <TextView
        android:id="@+id/textViewCloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewHumidity"
        app:layout_constraintTop_toBottomOf="@+id/tvWindDegree" />

    <TextView
        android:id="@+id/textViewWindSpd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewCloudiness"
        app:layout_constraintTop_toBottomOf="@+id/textViewHumidity" />

    <TextView
        android:id="@+id/textViewWindDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewWindSpd"
        app:layout_constraintTop_toBottomOf="@+id/tvWindSpd" />
</androidx.constraintlayout.widget.ConstraintLayout>